# Applied-AI-Tools

./: README.md  app.py  index.html  repo  requirements.txt  responder.py  result.html  style.css
001-job-quote-generator/: README.md  prompt.py
003-work-order-builder/: README.md  prompt.py
004-content-repurposer/: README.md  prompt.py
004-daily-job-brief/: README.md  prompt.py
005-meeting-agenda-architect/: README.md  prompt.py
005-site-safety-checklist/: README.md  prompt.py
006-meeting-minutes-formatter/: README.md  prompt.py
007-material-takeoff/: README.md  prompt.py
007-project-plan-generator/: README.md  prompt.py
008-change-order-draft/: README.md  prompt.py
008-sop-writer/: README.md  prompt.py
009-customer-support-macro-writer/: README.md  prompt.py
009-social-post-calendar/: README.md  prompt.py
010-bug-report-rewriter/: README.md  prompt.py
010-food-cost-calculator/: README.md  prompt.py
011-maintenance-plan/: README.md  prompt.py
011-recipe-standardizer/: README.md  prompt.py
orchestra-ai/: README.md  pyproject.toml
orchestra-ai/eval/: suite.yaml
orchestra-ai/orchestra/: bootstrap.py  cli.py  config.py  pipeline.py  reporting.py
orchestra-ai/orchestra/agents/: base.py  router.py  specialists.py  types.py
orchestra-ai/orchestra/eval/: harness.py
orchestra-ai/orchestra/llm/: cache.py  client.py  tool_parser.py
orchestra-ai/orchestra/memory/: session.py  vector.py
orchestra-ai/orchestra/server/: app.py
orchestra-ai/orchestra/tools/: __init__.py  builtins.py  registry.py
orchestra-ai/tasks/: sample.yaml
(+678 files in other folders)
